--- a/Fly.WebUI/Views/Aircrafts/Index.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Index.cshtml
@@ -3,7 +3,9 @@
 @model AircraftsViewModel;
 @inject IViewLocalizer Localizer
 
-<div class="card text-center mx-auto" style="width:1000px">
+
+
+<div class="card text-center mx-auto" style="width:1200px">
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
         <form asp-action="Index">
@@ -26,6 +28,10 @@
                 </div>
                 <br />
                 <div class="card-body">
+                    @if (User.IsInRole("Administrator"))
+                    {
+                        @Html.ActionLink("Create", "Create")
+                    }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
@@ -86,9 +92,12 @@
                                         @Html.DisplayFor(modelItem => item.Id)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                                        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                                        @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                                        @if (User.IsInRole("Administrator"))
+                                        {
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                        }
+                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
                                     </td>
                                 </tr>
                             }
