--- a/Fly.WebUI/Views/Seats/Index.cshtml
+++ b/Fly.WebUI/Views/Seats/Index.cshtml
@@ -14,6 +14,10 @@
                 </div>
                 <br />
                 <div class="card-body">
+                    @if (User.IsInRole("Administrator"))
+                    {
+                        @Html.ActionLink("Create", "Create")
+                    }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
@@ -55,9 +59,12 @@
                                         @Html.DisplayFor(modelItem => item.Tickets.Count)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                                        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                                        @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                                        @if (User.IsInRole("Administrator"))
+                                        {
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                        }
+                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
                                     </td>
                                 </tr>
                             }
