--- a/Fly.WebUI/Views/Cities/Create.cshtml
+++ b/Fly.WebUI/Views/Cities/Create.cshtml
@@ -1,36 +1,37 @@
 ﻿@model Fly.Core.Entities.City
 
-<h4>City</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card  mx-auto" style="width:1000px">
+    <img class="card-img-top" src="~/city.jpg">
+    <div class="card-body">
         <form asp-action="Create">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="IsoCountry" class="control-label"></label>
                 <input asp-for="IsoCountry" class="form-control" />
                 <span asp-validation-for="IsoCountry" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="IsoRegion" class="control-label"></label>
                 <input asp-for="IsoRegion" class="form-control" />
                 <span asp-validation-for="IsoRegion" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
+        <br />
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
