--- a/Fly.WebUI/Views/Cities/Edit.cshtml
+++ b/Fly.WebUI/Views/Cities/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Fly.Core.Entities.City
 
-<h4>City</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+
+<div class="card  mx-auto" style="width:1000px">
+    <img class="card-img-top" src="~/aircraft.jpg">
+    <div class="card-body">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -26,11 +26,12 @@
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
-    </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
+
+    </div>
 </div>
 
 @section Scripts {
