--- a/Fly.WebUI/Views/Managers/Create.cshtml
+++ b/Fly.WebUI/Views/Managers/Create.cshtml
@@ -1,31 +1,32 @@
 ﻿@model Fly.Core.Entities.Manager
 
-<h4>Manager</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card  mx-auto" style="width:1000px">
+    <img class="card-img-top" src="~/manager.jpg">
+    <div class="card-body">
         <form asp-action="Create">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="AirlineId" class="control-label"></label>
                 <input asp-for="AirlineId" class="form-control" />
                 <span asp-validation-for="AirlineId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
                 <input asp-for="UserId" class="form-control" />
                 <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
+        <br />
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
