--- a/Fly.WebUI/Views/Aircrafts/Edit.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Edit.cshtml
@@ -5,12 +5,13 @@
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
         <form asp-action="Edit">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ModelType" class="control-label"></label>
                 <input asp-for="ModelType" class="form-control" />
                 <span asp-validation-for="ModelType" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="SerialNumber" class="control-label"></label>
                 <input asp-for="SerialNumber" class="form-control" />
@@ -20,32 +21,31 @@
                 <label asp-for="ManufactureDate" class="control-label"></label>
                 <input asp-for="ManufactureDate" class="form-control" />
                 <span asp-validation-for="ManufactureDate" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="FlightHours" class="control-label"></label>
                 <input asp-for="FlightHours" class="form-control" />
                 <span asp-validation-for="FlightHours" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="AircraftState" class="control-label"></label>
                 <input asp-for="AircraftState" class="form-control" />
                 <span asp-validation-for="AircraftState" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="AirlineId" class="control-label"></label>
                 <input asp-for="AirlineId" class="form-control" />
                 <span asp-validation-for="AirlineId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="AirportId" class="control-label"></label>
                 <input asp-for="AirportId" class="form-control" />
                 <span asp-validation-for="AirportId" class="text-danger"></span>
-            </div>
-            
+            </div><br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
-        </form>
+        </form><br />
         <div>
             <a asp-action="Index">Back to List</a>
         </div>
