--- a/Fly.WebUI/Views/Airports/Edit.cshtml
+++ b/Fly.WebUI/Views/Airports/Edit.cshtml
@@ -5,42 +5,43 @@
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
         <form asp-action="Edit">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="AirportId" class="control-label"></label>
                 <input asp-for="AirportId" class="form-control" />
                 <span asp-validation-for="AirportId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="Longitude" class="control-label"></label>
                 <input asp-for="Longitude" class="form-control" />
                 <span asp-validation-for="Longitude" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="Latitude" class="control-label"></label>
                 <input asp-for="Latitude" class="form-control" />
                 <span asp-validation-for="Latitude" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="Altitude" class="control-label"></label>
                 <input asp-for="Altitude" class="form-control" />
                 <span asp-validation-for="Altitude" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="CityId" class="control-label"></label>
                 <input asp-for="CityId" class="form-control" />
                 <span asp-validation-for="CityId" class="text-danger"></span>
-            </div>
+            </div><br />
            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
-        </form>
+        </form><br />
         <div>
             <a asp-action="Index">Back to List</a>
         </div>
