--- a/Fly.WebUI/Views/Cities/Edit.cshtml
+++ b/Fly.WebUI/Views/Cities/Edit.cshtml
@@ -5,28 +5,29 @@
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
         <form asp-action="Edit">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="IsoCountry" class="control-label"></label>
                 <input asp-for="IsoCountry" class="form-control" />
                 <span asp-validation-for="IsoCountry" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="IsoRegion" class="control-label"></label>
                 <input asp-for="IsoRegion" class="form-control" />
                 <span asp-validation-for="IsoRegion" class="text-danger"></span>
             </div>
-            
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
-
+        <br />
         <div>
             <a asp-action="Index">Back to List</a>
         </div>
