--- a/Fly.WebUI/Views/Flights/Edit.cshtml
+++ b/Fly.WebUI/Views/Flights/Edit.cshtml
@@ -5,37 +5,38 @@
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
         <form asp-action="Edit">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DepartureAirportId" class="control-label"></label>
                 <input asp-for="DepartureAirportId" class="form-control" />
                 <span asp-validation-for="DepartureAirportId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="ArrivalAirportId" class="control-label"></label>
                 <input asp-for="ArrivalAirportId" class="form-control" />
                 <span asp-validation-for="ArrivalAirportId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="AircraftId" class="control-label"></label>
                 <input asp-for="AircraftId" class="form-control" />
                 <span asp-validation-for="AircraftId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="DepartureDateTime" class="control-label"></label>
                 <input asp-for="DepartureDateTime" class="form-control" />
                 <span asp-validation-for="DepartureDateTime" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="ArrivalDateTime" class="control-label"></label>
                 <input asp-for="ArrivalDateTime" class="form-control" />
                 <span asp-validation-for="ArrivalDateTime" class="text-danger"></span>
             </div>
-            
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
-        </form>
+        </form><br />
         <div>
             <a asp-action="Index">Back to List</a>
         </div>
