--- a/Fly.WebUI/Views/Seats/Edit.cshtml
+++ b/Fly.WebUI/Views/Seats/Edit.cshtml
@@ -5,32 +5,33 @@
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
         <form asp-action="Edit">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Row" class="control-label"></label>
                 <input asp-for="Row" class="form-control" />
                 <span asp-validation-for="Row" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="Column" class="control-label"></label>
                 <input asp-for="Column" class="form-control" />
                 <span asp-validation-for="Column" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="SeatClass" class="control-label"></label>
                 <input asp-for="SeatClass" class="form-control" />
                 <span asp-validation-for="SeatClass" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="AircraftId" class="control-label"></label>
                 <input asp-for="AircraftId" class="form-control" />
                 <span asp-validation-for="AircraftId" class="text-danger"></span>
             </div>
-            
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
-        </form>
+        </form><br />
         <div>
             <a asp-action="Index">Back to List</a>
         </div>
