--- a/Fly.IdentityServer/Pages/Account/Register/Index.cshtml
+++ b/Fly.IdentityServer/Pages/Account/Register/Index.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="UserForRegistrationDto.Password" class="control-label"></label>
-                <input asp-for="UserForRegistrationDto.Password" class="form-control" />
+                <input asp-for="UserForRegistrationDto.Password" type="password" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="UserForRegistrationDto.Email" class="control-label"></label>
